// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bidirectional Both empty 1`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Bidirectional Both match 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Bidirectional different cell 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "Hc2DO@200005DK@@",
      {
        "t1": [
          "Hc2DO@200005DK@@",
          {
            "r1": [
              "Hc2DO@200005DK@@",
              {
                "c1": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              3872001508,
            ],
          },
          4184957743,
        ],
      },
      4249732151,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4249732151,
]
`;

exports[`Bidirectional different row 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "Hc2DO@200005DK@@",
      {
        "t1": [
          "Hc2DO@200005DK@@",
          {
            "r1": [
              "Hc2DO@200005DK@@",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              2141459772,
            ],
          },
          166633139,
        ],
      },
      2440458365,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2440458365,
]
`;

exports[`Bidirectional different table 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "Hc2DO@200005DK@@",
      {
        "t1": [
          "Hc2DO@200005DK@@",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@200005DK@@",
              {
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              3166900994,
            ],
          },
          1624898269,
        ],
      },
      1953197400,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1953197400,
]
`;

exports[`Bidirectional different tables 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "Hc2DO@200005DK@@",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@200005DK@@",
          {
            "r2": [
              "Hc2DO@200005DK@@",
              {
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              3166900994,
            ],
          },
          4120628563,
        ],
      },
      1153126896,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1153126896,
]
`;

exports[`Bidirectional different value 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@200005DK@@",
      {
        "v1": [
          "Hc2DO@200005DK@@",
          2,
          1097701853,
        ],
      },
      2663976210,
    ],
  ],
  2663976210,
]
`;

exports[`Bidirectional different values 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@200005DK@@",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@200005DK@@",
          2,
          1097701853,
        ],
      },
      2273447692,
    ],
  ],
  2273447692,
]
`;

exports[`Bidirectional store1 empty 1`] = `
[
  "Hc2DO@000005DK@@",
  [
    [
      "Hc2DO@000005DK@@",
      {
        "t1": [
          "Hc2DO@000005DK@@",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          3344002712,
        ],
        "t2": [
          "Hc2DO@000005DK@@",
          {
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          1360887207,
        ],
      },
      2945952928,
    ],
    [
      "Hc2DO@000005DK@@",
      {
        "v1": [
          "Hc2DO@000005DK@@",
          1,
          1915036128,
        ],
        "v2": [
          "Hc2DO@000005DK@@",
          2,
          2554361111,
        ],
      },
      1072194670,
    ],
  ],
  2424293582,
]
`;

exports[`Bidirectional store1 missing cell 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "Hc2DO@200005DK@@",
      {
        "t1": [
          "Hc2DO@200005DK@@",
          {
            "r1": [
              "Hc2DO@200005DK@@",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              2141459772,
            ],
          },
          166633139,
        ],
      },
      2440458365,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2440458365,
]
`;

exports[`Bidirectional store1 missing row 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "Hc2DO@200005DK@@",
      {
        "t1": [
          "Hc2DO@200005DK@@",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@200005DK@@",
              {
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              3166900994,
            ],
          },
          1624898269,
        ],
      },
      1953197400,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1953197400,
]
`;

exports[`Bidirectional store1 missing table 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "Hc2DO@200005DK@@",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@200005DK@@",
          {
            "r2": [
              "Hc2DO@200005DK@@",
              {
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              3166900994,
            ],
          },
          4120628563,
        ],
      },
      1153126896,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1153126896,
]
`;

exports[`Bidirectional store1 missing tables 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "Hc2DO@200005DK@@",
      {
        "t1": [
          "Hc2DO@200005DK@@",
          {
            "r1": [
              "Hc2DO@200005DK@@",
              {
                "c1": [
                  "Hc2DO@200005DK@@",
                  1,
                  3718299866,
                ],
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              1232861615,
            ],
            "r2": [
              "Hc2DO@200005DK@@",
              {
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              3166900994,
            ],
          },
          1678519644,
        ],
        "t2": [
          "Hc2DO@200005DK@@",
          {
            "r2": [
              "Hc2DO@200005DK@@",
              {
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              3166900994,
            ],
          },
          4120628563,
        ],
      },
      1706545122,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  802389136,
]
`;

exports[`Bidirectional store1 missing value 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@200005DK@@",
      {
        "v1": [
          "Hc2DO@200005DK@@",
          1,
          3718299866,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      883411796,
    ],
  ],
  883411796,
]
`;

exports[`Bidirectional store1 missing values 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@200005DK@@",
      {
        "v1": [
          "Hc2DO@200005DK@@",
          1,
          3718299866,
        ],
        "v2": [
          "Hc2DO@200005DK@@",
          2,
          1097701853,
        ],
      },
      2798260479,
    ],
  ],
  1985420193,
]
`;

exports[`Bidirectional store2 empty 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Bidirectional store2 missing cell 1`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@200008DKS9",
      {
        "t1": [
          "Hc2DO@200008DKS9",
          {
            "r1": [
              "Hc2DO@200008DKS9",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              2359341338,
            ],
          },
          1069499665,
        ],
      },
      3123405827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3123405827,
]
`;

exports[`Bidirectional store2 missing row 1`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@200008DKS9",
      {
        "t1": [
          "Hc2DO@200008DKS9",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@200008DKS9",
              {
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              996380338,
            ],
          },
          690271095,
        ],
      },
      1812820589,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1812820589,
]
`;

exports[`Bidirectional store2 missing table 1`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@200008DKS9",
      {
        "t1": [
          "Hc2DO@000005DK@@",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          3344002712,
        ],
        "t2": [
          "Hc2DO@200008DKS9",
          {
            "r2": [
              "Hc2DO@200008DKS9",
              {
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              996380338,
            ],
          },
          3211305032,
        ],
      },
      3618528747,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3618528747,
]
`;

exports[`Bidirectional store2 missing tables 1`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@200008DKS9",
      {
        "t1": [
          "Hc2DO@200008DKS9",
          {
            "r1": [
              "Hc2DO@200008DKS9",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  1,
                  2771101213,
                ],
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              3105465029,
            ],
            "r2": [
              "Hc2DO@200008DKS9",
              {
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              996380338,
            ],
          },
          1179618779,
        ],
        "t2": [
          "Hc2DO@200008DKS9",
          {
            "r2": [
              "Hc2DO@200008DKS9",
              {
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              996380338,
            ],
          },
          3211305032,
        ],
      },
      3644316511,
    ],
    [
      "Hc2DO@000005DK@@",
      {
        "v1": [
          "Hc2DO@000005DK@@",
          1,
          1915036128,
        ],
        "v2": [
          "Hc2DO@000005DK@@",
          2,
          2554361111,
        ],
      },
      1072194670,
    ],
  ],
  3873423153,
]
`;

exports[`Bidirectional store2 missing value 1`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@200008DKS9",
      {
        "v1": [
          "Hc2DO@200008DKS9",
          1,
          2771101213,
        ],
        "v2": [
          "Hc2DO@000005DK@@",
          2,
          2554361111,
        ],
      },
      4103087140,
    ],
  ],
  4103087140,
]
`;

exports[`Bidirectional store2 missing values 1`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@000005DK@@",
      {
        "t1": [
          "Hc2DO@000005DK@@",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          3344002712,
        ],
        "t2": [
          "Hc2DO@000005DK@@",
          {
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          1360887207,
        ],
      },
      2945952928,
    ],
    [
      "Hc2DO@200008DKS9",
      {
        "v1": [
          "Hc2DO@200008DKS9",
          1,
          2771101213,
        ],
        "v2": [
          "Hc2DO@200008DKS9",
          2,
          1735757618,
        ],
      },
      1480624617,
    ],
  ],
  4158072137,
]
`;

exports[`Unidirectional autoLoad1 but not autoSave2, defaults 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t0": [
          "Hc2DO@000008DKS9",
          {
            "r0": [
              "Hc2DO@000008DKS9",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              3462856275,
            ],
          },
          1034923531,
        ],
      },
      1374923724,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v0": [
          "Hc2DO@000008DKS9",
          0,
          2614692414,
        ],
      },
      507814229,
    ],
  ],
  1337395865,
]
`;

exports[`Unidirectional autoLoad1 but not autoSave2, defaults 2`] = `
[
  "Hc2DO@000005DK@@",
  [
    [
      "Hc2DO@000005DK@@",
      {
        "t1": [
          "Hc2DO@000005DK@@",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          3344002712,
        ],
        "t2": [
          "Hc2DO@000005DK@@",
          {
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          1360887207,
        ],
      },
      2945952928,
    ],
    [
      "Hc2DO@000005DK@@",
      {
        "v1": [
          "Hc2DO@000005DK@@",
          1,
          1915036128,
        ],
        "v2": [
          "Hc2DO@000005DK@@",
          2,
          2554361111,
        ],
      },
      1072194670,
    ],
  ],
  2424293582,
]
`;

exports[`Unidirectional autoSave1 but not autoLoad2 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Unidirectional autoSave1 but not autoLoad2 2`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Unidirectional load1 but not autoSave2, defaults 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t0": [
          "Hc2DO@000008DKS9",
          {
            "r0": [
              "Hc2DO@000008DKS9",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              3462856275,
            ],
          },
          1034923531,
        ],
      },
      1374923724,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v0": [
          "Hc2DO@000008DKS9",
          0,
          2614692414,
        ],
      },
      507814229,
    ],
  ],
  1337395865,
]
`;

exports[`Unidirectional load1 but not autoSave2, defaults 2`] = `
[
  "Hc2DO@000005DK@@",
  [
    [
      "Hc2DO@000005DK@@",
      {
        "t1": [
          "Hc2DO@000005DK@@",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          3344002712,
        ],
        "t2": [
          "Hc2DO@000005DK@@",
          {
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          1360887207,
        ],
      },
      2945952928,
    ],
    [
      "Hc2DO@000005DK@@",
      {
        "v1": [
          "Hc2DO@000005DK@@",
          1,
          1915036128,
        ],
        "v2": [
          "Hc2DO@000005DK@@",
          2,
          2554361111,
        ],
      },
      1072194670,
    ],
  ],
  2424293582,
]
`;

exports[`Unidirectional save1 but not autoLoad2 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Unidirectional save1 but not autoLoad2 2`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;
